# gestor-dividas-pessoais

./: .gitignore  DesafioSerasa.md  README.md  rules_keycloak.md
.fetch-client/: fetchClient.json  fetchClientCollection.json  fetchClientCookies.json  fetchClientHistory.json  fetchClientVariable.json
backend/: .env.sample  .gitignore  alembic.ini  backend_rules.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/.fetch-client/: fetchClient.json  fetchClientCollection.json  fetchClientCookies.json  fetchClientHistory.json  fetchClientVariable.json
backend/app/: config.py  server.py
backend/app/database/: database.py
backend/app/routes/: health.py  routes.py
backend/app/schemas/: divida_schema.py  schemas.py
backend/docs/: monitoring.md
backend/migrations/: env.py
backend/migrations/versions/: 3f14aad666da_initial.py  c2fa7a981427_initial_migration.py
backend/src/: config.py  schemas__init__.py  server.py
backend/src/auth/: auth.py
backend/src/config/: settings.py
backend/src/core/: __init__.py  monitoring.py
backend/src/database/: database.py  init_db.py
backend/src/middleware/: monitoring.py
backend/src/models/: models.py
backend/src/routes/: auth_routes.py  dashboard_routes.py  dividas_routes.py  health.py  metrics.py  usuarios_routes.py
backend/src/schemas/: dashboard_schema.py  divida_schema.py  usuario_schema.py
backend/src/scripts/: update_passwords.py
backend/tests/: conftest.py  test_api.py  test_auth.py  test_metrics.py  test_monitoring.py
frontend/: .chrome-path  .gitignore  README.md  angular.json  (+5 more)
(+79 files in other folders)
